Utils/yaml/keycloak/route-keycloak.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak
  namespace: microservices
  labels:
    app: keycloak
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: microservices
    app.openshift.io/runtime-version: latest
spec:
  host: keycloak-microservices.apps-crc.testing
  to:
    kind: Service
    name: keycloak
  port:
    targetPort: 8180-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
